--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 
 .title-bar {
   padding: 20px;
-  background-color: #EFEFEF;
+  background-color: #efefef;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -21,7 +21,7 @@ body {
 .title-bar__button {
   padding: 12px;
   background-color: #555555;
-  color: #FAFAFA;
+  color: #fafafa;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 12px;
   line-height: 14px;
@@ -35,5 +35,155 @@ body {
 
 .title-bar__button:hover {
   opacity: 75%;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+.container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 15px;
+}
+
+.card {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bold;
+  height: 48rem;
+  width: 35rem;
+  margin: 1rem;
+  margin-bottom: 2rem;
+  position: relative;
+  border: 1px solid gray;
+  border-radius: 10px;
+  box-shadow: -6px 9px 25px -4px rgba(94, 90, 90, 0.58);
+  -webkit-box-shadow: -6px 9px 25px -4px rgba(94, 90, 90, 0.58);
+  -moz-box-shadow: -6px 9px 25px -4px rgba(94, 90, 90, 0.58);
+  overflow: hidden;
+}
+
+.card img {
+  width: 100%;
+  padding: 2rem 0rem;
+  border-bottom: 1px solid gray;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.card:hover img {
+  -webkit-transform: scale(1.08);
+          transform: scale(1.08);
+}
+
+.card .card-body {
+  position: relative;
+  color: rgba(43, 42, 42, 0.863);
+  padding-left: 1rem;
+}
+
+.card .card-body .description {
+  font-size: 1.1rem;
+  font-weight: 500;
+  margin-bottom: 2rem;
+  color: rgba(43, 42, 42, 0.863);
+}
+
+.card h1 {
+  font-size: 2rem;
+  margin-top: 2rem;
+  margin-bottom: 0;
+}
+
+.card h5 {
+  font-size: 1.5rem;
+  margin-bottom: 8px;
+  color: rgba(233, 32, 32, 0.932);
+}
+
+.card .card-variants {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.card .card-variants .variants-num {
+  background-color: rgba(233, 32, 32, 0.932);
+  color: white;
+  font-size: 1.1rem;
+  padding: 0.5rem;
+  margin-right: 9px;
+  border-radius: 10px;
+}
+
+.card .card-variants .badge {
+  font-size: 1.1rem;
+  padding: 0.5rem;
+  border-radius: 10px;
+  background-color: rgba(230, 155, 43, 0.959);
+  color: white;
+}
+
+.card .card-bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.card .btn-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  margin-top: 20px;
+}
+
+.card .buy-btn {
+  background-color: #368885;
+  padding: 0.6rem 2rem;
+  margin: 0.6rem;
+  border-radius: 6px;
+  border: 3px solid #368885;
+  color: white;
+  cursor: pointer;
+}
+
+.card .cart-btn {
+  border: 3px solid #368885;
+  padding: 0.6rem 1rem;
+  margin: 0.6rem;
+  border-radius: 6px;
+  background-color: white;
+  cursor: pointer;
+}
+
+.card .buy-btn:hover {
+  background-color: white;
+  color: black;
+  -webkit-transition: background-color 0.5s ease-in-out;
+  transition: background-color 0.5s ease-in-out;
+}
+
+.card .cart-btn:hover {
+  background-color: #368885;
+  color: white;
+  -webkit-transition: background-color 0.5s ease-in-out;
+  transition: background-color 0.5s ease-in-out;
 }
 /*# sourceMappingURL=style.css.map */
