--- a/style.scss
+++ b/style.scss
@@ -5,14 +5,14 @@ body {
 }
 .title-bar {
   padding: 20px;
-  background-color: #EFEFEF;
+  background-color: #efefef;
   display: flex;
   align-items: center;
   justify-content: flex-end;
   &__button {
     padding: 12px;
     background-color: #555555;
-    color: #FAFAFA;
+    color: #fafafa;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12px;
     line-height: 14px;
@@ -28,3 +28,145 @@ body {
 }
 
 // Add your scss below this line
+
+$color_gray: rgba(43, 42, 42, 0.863);
+$color_white: white;
+$color_red: rgba(233, 32, 32, 0.932);
+$color_btn: #368885;
+
+@mixin flexbox {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+.container {
+  // height: 90vh;
+  @include flexbox;
+  margin-top: 15px;
+}
+
+.card {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bold;
+  height: 48rem;
+  width: 35rem;
+  margin: 1rem;
+  margin-bottom: 2rem;
+
+  position: relative;
+  border: 1px solid gray;
+  border-radius: 10px;
+  box-shadow: -6px 9px 25px -4px rgba(94, 90, 90, 0.58);
+  -webkit-box-shadow: -6px 9px 25px -4px rgba(94, 90, 90, 0.58);
+  -moz-box-shadow: -6px 9px 25px -4px rgba(94, 90, 90, 0.58);
+  overflow: hidden;
+
+  & img {
+    width: 100%;
+    padding: 2rem 0rem;
+    border-bottom: 1px solid gray;
+    transition: 1s;
+  }
+
+  &:hover img {
+    transform: scale(1.08);
+  }
+
+  & .card-body {
+    // text-align: center;
+    position: relative;
+    color: $color_gray;
+    padding-left: 1rem;
+
+    & .description {
+      font-size: 1.1rem;
+      font-weight: 500;
+      margin-bottom: 2rem;
+      color: $color_gray;
+    }
+  }
+
+  & h1 {
+    font-size: 2rem;
+    margin-top: 2rem;
+    margin-bottom: 0;
+  }
+
+  & h5 {
+    font-size: 1.5rem;
+    margin-bottom: 8px;
+    color: $color_red;
+  }
+
+  & .card-variants {
+    display: flex;
+    justify-content: space-between;
+
+    .variants-num {
+      background-color: $color_red;
+      color: $color_white;
+      font-size: 1.1rem;
+      padding: 0.5rem;
+      // margin: 4px;
+      margin-right: 9px;
+      border-radius: 10px;
+    }
+    .badge {
+      font-size: 1.1rem;
+      padding: 0.5rem;
+      // margin: 4px;
+      border-radius: 10px;
+      background-color: rgba(230, 155, 43, 0.959);
+      color: $color_white;
+    }
+  }
+
+  & .card-bottom {
+    display: flex;
+    justify-content: space-around;
+    // margin-top: 8px;
+  }
+
+  & .btn-container {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 20px;
+  }
+
+  & .buy-btn {
+    background-color: $color_btn;
+    padding: 0.6rem 2rem;
+    margin: 0.6rem;
+    border-radius: 6px;
+    border: 3px solid $color_btn;
+    color: $color_white;
+    cursor: pointer;
+  }
+
+  & .cart-btn {
+    border: 3px solid $color_btn;
+    padding: 0.6rem 1rem;
+    margin: 0.6rem;
+    border-radius: 6px;
+    background-color: $color_white;
+    cursor: pointer;
+  }
+
+  & .buy-btn:hover {
+    background-color: $color_white;
+    color: black;
+    transition: background-color 0.5s ease-in-out;
+  }
+
+  & .cart-btn:hover {
+    background-color: $color_btn;
+    color: $color_white;
+    transition: background-color 0.5s ease-in-out;
+  }
+}
